<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_numeroSocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
           >
            <EditText
                android:id="@+id/input_numeroSocio"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Nombre"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textTamano" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            >

            <EditText
                android:id="@+id/input_edad"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/Edad"
                android:textSize="@dimen/textTamano"
                android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Genero"
            android:id="@+id/txtGenero"
            android:textColor="@color/colorAccent"

            android:textSize="@dimen/textTamano"
           />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rgGenero"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/M"
                android:tag="M"
                android:textSize="@dimen/textTamano"
                android:id="@+id/rbM"
                android:textColor="@color/colorAccent"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/F"
                android:tag="F"
                android:id="@+id/rbF"
                android:layout_marginLeft="30dp"
                android:textSize="@dimen/textTamano"


                android:textColor="@color/colorAccent"/>
        </RadioGroup>

    </LinearLayout>

</LinearLayout>